WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
221739
[LFC][IFC] Inline boxes have incorrect content box height/width values
https://bugs.webkit.org/show_bug.cgi?id=221739
Summary
[LFC][IFC] Inline boxes have incorrect content box height/width values
alan
Reported
2021-02-10 20:18:40 PST
when padding/borders are set
Attachments
Patch
(3.20 KB, patch)
2021-02-10 20:21 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2021-02-10 20:21:51 PST
Created
attachment 419941
[details]
Patch
EWS
Comment 2
2021-02-11 06:47:03 PST
Committed
r272724
: <
https://commits.webkit.org/r272724
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 419941
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-02-11 06:48:15 PST
<
rdar://problem/74232456
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug