[LFC][IFC] Inline boxes have incorrect content box height/width values https://bugs.webkit.org/show_bug.cgi?id=221739

Reviewed by Antti Koivisto.

Do not include horizontal and vertical padding and borders when computing the content box size.

* layout/inlineformatting/InlineFormattingContext.cpp:
(WebCore::Layout::InlineFormattingContext::computeGeometryForLineContent):
* layout/inlineformatting/InlineLineBox.cpp:
(WebCore::Layout::LineBox::logicalRectForInlineBox const):


Canonical link: https://commits.webkit.org/233965@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272724 268f45cc-cd09-0410-ab3c-d52691b4dbfc